# conan-quirc

./: CMakeLists.txt  README.md  appveyor.yml  conandata.yml  conanfile.py
patches/: export-symbols.patch
patches/1.1/: fix-vla-c99loop.patch
